# compositional-diffusion

./: README.md  pyproject.toml
gaussian_experiments/: README.md  config.py  evaluation.py  feynman_kac.py  gmm_lib.py  noise_schedule.py  plotting.py  run_gaussian_2d_experiment.py  run_gmm_experiment.py  score_model.py  sweep.py
gaussian_experiments/configs/: gaussian_2d.yaml  gmm.yaml  gmm2.yaml
room_experiments/: README.md  build_dataset.py  create_prompts.py  fkc_sampling.py  generate_dataset_images.py  perturbations.yaml  run_fkc_sample.py  train.py
room_experiments/train_configs/: FC_ID.yaml  FC_ID_sep_control.yaml  FC_ID_sep_couch.yaml  FC_ID_sep_painting.yaml  FC_OOD.yaml  FC_OOD_sep_control.yaml  FC_OOD_sep_couch.yaml  FC_OOD_sep_painting.yaml  NFC_ID.yaml  NFC_ID_sep_control.yaml  NFC_ID_sep_couch.yaml  NFC_ID_sep_table.yaml  NFC_OOD.yaml  NFC_low_sep_control.yaml  NFC_low_sep_couch.yaml  NFC_low_sep_table.yaml
